# packet-analysis

./: .gitignore  Dockerfile  README.md  docker-compose-default.yml  docker-compose.yml  pyproject.toml  run.py  server.py  server_test.py  start_server.py  test_main.py  webui.py
.github/workflows/: docker-image.yml
packet_analysis/analysis/: cluster.py
packet_analysis/json_build/: anomaly_detection.py  comparison_analysis.py
packet_analysis/preprocess/: alignment.py  extract_to_csv.py
packet_analysis/webui/: interface.py
src/: run.py  run_celery.ps1  server.py  test_code.py  webui.py
src/celery_worker/: Dockerfile
src/packet_analysis/: app.py  config.py
src/packet_analysis/analysis/: cluster.py  correlation_analysis.py
src/packet_analysis/api/: routes.py
src/packet_analysis/celery_app/: celery.py
src/packet_analysis/json_build/: alignment_analysis.py  anomaly_detection.py  comparison_analysis.py  db_analysis.py  exception_analysis.py  json_host_database.py  json_host_database_correlation.py  random_forest_model.py
src/packet_analysis/model/: pcap_models.py
src/packet_analysis/preprocess/: alignment.py  alignment_two_paths.py  api_config.txt  extract_to_csv.py  extract_to_csv_split.py  kpi_mapping.txt
src/packet_analysis/services/: pcap_extractor.py  pcap_splitter.py  result_manager.py
src/packet_analysis/services/analyzer/: comparator.py  data_align.py  general.py  playback.py  producer.py
src/packet_analysis/services/json_build/: alignment_analysis.py  anomaly.py  comparison.py  correlation.py  database.py  exception.py  random_forest.py  suggestions.py
src/packet_analysis/tasks/: analyzer.py  coordinator.py  pcap_processor.py  result_handler.py
src/packet_analysis/utils/: cache.py  callback.py  dict_checker.py  logger_config.py  path.py  postapi.py
src/packet_analysis/webui/: interface.py
