[project]
name = "packet-analysis"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "zerosignal", email = "zerosignal0101@proton.me"},
]
dependencies = ["celery[redis]==5.5.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "private"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = false

[tool.pdm]
distribution = false
