[project]
name = "packet-analysis"
version = "1.0.0"
description = "An anomaly analysis backend based on packets captured in production and replay environments."
authors = [
    {name = "zerosignal", email = "zerosignal0101@proton.me"},
]
dependencies = ["celery[redis]==5.5.1", "pandas==2.2.3", "pyshark==0.6", "flask==3.0.3", "scikit-learn==1.6.1", "urllib3==1.26.18", "rootutils>=1.0.7", "pydantic==2.10.6", "scapy==2.6.1", "requests==2.32.3", "pyarrow==19.0.1", "gunicorn==23.0.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "private"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = false

[tool.pdm]
distribution = false
